--- a/templates/index.html
+++ b/templates/index.html
@@ -62,33 +62,36 @@
         </div>
 
         <div class="container file-upload">
-            <template>
-                <section>
-                    <b-field>
-                        <b-upload v-model="dropFiles" drag-drop>
-                            <section class="section">
-                                <div class="content has-text-centered">
-                                    <p>
-                                        <b-icon pack="fas" icon="upload" size="is-large">
-                                        </b-icon>
-                                    </p>
-                                    <p>Drop your files here or click to upload</p>
-                                </div>
-                            </section>
-                        </b-upload>
-                    </b-field>
+            <form id='song_upload' action='{{ url_for("upload_song") }}'>
+                <template>
+                    <section>
+                        <b-field>
+                            <b-upload v-model="dropFiles" drag-drop>
+                                <section class="section">
+                                    <div class="content has-text-centered">
+                                        <p>
+                                            <b-icon pack="fas" icon="upload" size="is-large">
+                                            </b-icon>
+                                        </p>
+                                        <p>Drop your files here or click to upload</p>
+                                        <!-- <input type='file' id='song' name='song'> -->
+                                    </div>
+                                </section>
+                            </b-upload>
+                        </b-field>
 
-                    <div class="tags">
-                        <span v-if="dropFiles" class="tag is-primary">
-                            ${dropFiles.name}
-                            <button class="delete is-small" type="button" @click="deleteDropFile()">
-                            </button>
-                        </span>
-                    </div>
+                        <div class="tags">
+                            <span v-if="dropFiles" class="tag is-primary">
+                                ${dropFiles.name}
+                                <button class="delete is-small" type="button" @click="deleteDropFile()">
+                                </button>
+                            </span>
+                        </div>
 
-                    <b-button class="upload-button" @click="uploadFile">Upload</b-button>
-                </section>
-            </template>
+                        <b-button class="upload-button" @click="uploadFile">Upload</b-button>
+                    </section>
+                </template>
+            </form>
         </div>
 
 
