--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,11 @@
                     <b-navbar-item href="/">
                         <img class="navbar-logo" src="static/assets/images/logo.png" alt="MusiMaker">
                     </b-navbar-item>
+                    <b-navbar-item href="/global_uploads">
+                        <a class="navbar-text" alt="Global Uploads">
+                            Global Uploads
+                            </a>
+                    </b-navbar-item>
                 </template>
                 <template #start>
 
