--- a/templates/global_uploads.html
+++ b/templates/global_uploads.html
@@ -37,7 +37,7 @@
                     </b-navbar-item>
                     <b-navbar-item>
                         <a class='navbar-text-logout' href='/sign_out'>
-                            Logout
+                             LOGOUT
                         </a>
                     </b-navbar-item>
                     {% else %}
@@ -110,7 +110,7 @@
                     numeric:false 
                 },
                 {
-                    field: 'classification',
+                    field: 'top_classification',
                     label: 'Classification',
                     numeric:false 
                 },
