--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,6 +15,20 @@
   font-size:1.5em;
 }
 
+th {
+  color: white !important;
+  font-weight: 600;
+}
+
+td {
+  color: #EFEFEF !important;
+}
+
+.white-font {
+  color: #EFEFEF !important;
+  margin-bottom: 5px;
+}
+
 .user-logo {
   max-height: 2rem !important;
   position: relative;
@@ -74,18 +88,34 @@ html {
   margin-top: 75px;
 }
 
+.table {
+  -webkit-box-shadow: 0px 13px 0px -3px rgba(0,0,0,0.39); 
+  box-shadow: 0px 13px 0px -3px rgba(0,0,0,0.39);
+  border: 3px solid #111;
+  border-radius: 5px;
+  border-collapse: separate !important;
+}
+
 .tagline {
   padding: 15px;
   margin-top: 25px;
 }
 
 .spectrogram_image {
-  filter: drop-shadow(0 0 0.25rem rgb(255, 255, 255));
-  margin-bottom: 20px;
+  -webkit-box-shadow: 0px 13px 0px -3px rgba(0,0,0,0.39); 
+  box-shadow: 0px 13px 0px -3px rgba(0,0,0,0.39);
+  margin-bottom: 29px;
+  border: 3px solid #111;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .confidence_chart {
-  filter: drop-shadow(0 0 0.25rem rgb(255, 255, 255));
+  -webkit-box-shadow: 0px 13px 0px -3px rgba(0,0,0,0.39); 
+  box-shadow: 0px 13px 0px -3px rgba(0,0,0,0.39);
+  border: 3px solid #111;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 #loading-screen {
@@ -96,16 +126,25 @@ html {
   left: 0;
 }
 
+.header.white-font {
+  padding-left: 0px !important;
+  margin-bottom: 5px;
+  padding-bottom: 0px;
+}
+
+#results-table {
+  margin-bottom: 50px;
+}
+
 #results-table tbody tr:hover {
-  background-color:rgba(239,239,239, 0.9);
-  color: #000;
+  background-color:#6f4787;
   cursor: pointer; 
 }
 
 .truncate {
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; 
 }
 
 .login-container {
