--- a/templates/global_uploads.html
+++ b/templates/global_uploads.html
@@ -57,10 +57,10 @@
         </template>
 
         <div class="container">
-            <div class="columns home-banner">
+            <div class="columns">
                 <div class="column">
                     <div class="content tagline header">
-                        <h1> Global Uploads 
+                        <h1 class="white-font"> Global Uploads 
                         </h1>
                     </div>
                 </div>
