--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="column">
                     <div class="content tagline">
-                        <h1>Genre classification for the avant-garde composer. <br> <br>
+                        <h1 style="color: #efefef;">Genre classification for the avant-garde composer. <br> <br>
                             Get started by uploading a .mp3 or .wav file below.
                         </h1>
                     </div>
@@ -100,7 +100,8 @@
                             </span>
                         </div>
 
-                        <b-button class="upload-button" @click="uploadFile">Upload</b-button>
+                        <b-button class="upload-button" @click="uploadFile(); openLoading();">Upload</b-button>
+                            <b-loading :is-full-page="isFullPage" v-model="isLoading" :can-cancel="true"></b-loading>
                     </section>
                 </template>
         </div>
