--- a/templates/user_uploads.html
+++ b/templates/user_uploads.html
@@ -57,10 +57,10 @@
         </template>
 
         <div class="container">
-            <div class="columns home-banner">
+            <div class="columns">
                 <div class="column">
                     <div class="content tagline header">
-                        <h1 class="capitalize"> {{username}}'s uploads
+                        <h1 class="capitalize white-font"> {{username}}'s uploads
                         </h1>
                     </div>
                 </div>
