--- a/templates/global_uploads.html
+++ b/templates/global_uploads.html
@@ -92,37 +92,44 @@
                 {
                     field: 'song_id',
                     label: 'Song ID',
-                    numeric:true 
+                    numeric:true,
+                    sortable:true
                 },
                 {
                     field: 'user_id',
                     label: 'User ID',
-                    numeric:true 
+                    numeric:true,
+                    sortable:true 
                 },
                 {
                     field: 'user_name',
                     label: 'Username',
-                    numeric:false
+                    numeric:false,
+                    sortable:true
                 },
                 {
                     field: 'filename',
                     label: 'Filename',
-                    numeric:false 
+                    numeric:false,
+                    sortable:true 
                 },
                 {
                     field: 'top_classification',
                     label: 'Classification',
-                    numeric:false 
+                    numeric:false,
+                    sortable:true 
                 },
                 {
                     field: 'confidence',
                     label: 'Confidence',
-                    numeric:false 
+                    numeric:false,
+                    sortable:true 
                 },
                 {
                     field: 'date',
                     label: 'Date',
-                    numeric:false 
+                    numeric:false,
+                    sortable:true 
                 },
             ]
         },
