--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                 <div class="column">
                     <div class="content tagline">
                         <h1 style="color: #efefef;">Genre classification for the avant-garde composer. <br> <br>
-                            Get started by uploading a .mp3 or .wav file below.
+                            Get started by uploading a .mp3 or .wav file below, or <a href="/spotify_search" style="color:rgb(222, 199, 255);text-decoration: underline;">select a song from Spotify</a>.
                         </h1>
                     </div>
                 </div>
