--- a/templates/spotify_song_search.html
+++ b/templates/spotify_song_search.html
@@ -71,7 +71,7 @@
         
         
         <div class="container" id="spotify-table">
-            <form  action="{{ url_for('search_song') }}">
+            <form  action="{{ url_for('spotify_song') }}">
                 <input name='spsearch' id='spsearch' type="text" v-model="search" placeholder="Search Song" /> 
                 <input type='submit'/>
             </form>
